--- a/CAPSProj/src/main/resources/templates/Admin.html
+++ b/CAPSProj/src/main/resources/templates/Admin.html
@@ -6,6 +6,15 @@
 </head>
 <body>
 	<h1>User listing</h1>
+	<div>
+	<form th:action="@{listfilter}">
+    <button type="submit" th:name="role" th:value="STUDENT">Student</button>
+    <button type="submit" th:name="role" th:value="LECTURER">Lecturer</button>
+    <button type="submit" th:name="role" th:value="ADMIN">Admin</button>
+    <button type="submit">All</button>
+  </form>
+	</div>
+<div>
 	<table>
 		<tr>
 			<th>UserID</th>
@@ -30,5 +39,30 @@
 			<td th:text = ${user.address}>Address</td>		
 		</tr>
 	</table>
+</div>
+<div>&nbsp;</div>
+	<div>
+		Total Items: [[${totalItems}]] - Page[[${currentPage}]] of [[${totalPages}]]
+		&nbsp; - &nbsp;
+		
+		<a th:if="${currentPage > 1}" th:href="@{/admin/page/1}">First</a>
+		<span th:unless="${currentPage > 1}">First</span>
+		&nbsp;&nbsp;
+		<a th:if="${currentPage > 1}" th:href="@{'/admin/page/' + ${currentPage - 1}}">Previous</a>
+		<span th:unless="${currentPage  > 1}">Previous</span> &nbsp;&nbsp;
+		
+		
+		<span th:each="i: ${#numbers.sequence(1, totalPages)}">
+			<a th:if="${i != currentPage}" th:href="@{'/admin/page/' + ${i}}">[[${i}]]</a>
+			<span th:unless="${i != currentPage}">[[${i}]]</span> &nbsp;&nbsp;
+		</span>
+		
+		<a th:if="${currentPage < totalPages}" th:href="@{'/admin/page/' + ${currentPage + 1}}">Next</a>
+		<span th:unless="${currentPage < totalPages}">Next</span> &nbsp;&nbsp;
+		 
+		<a th:if="${currentPage < totalPages}" th:href="@{'/admin/page/' + ${totalPages}}">Last</a>
+		<span th:unless="${currentPage < totalPages}">Last</span> &nbsp;&nbsp;
+		
+	</div>
 </body>
 </html>
