--- a/CAPSProj/src/main/resources/templates/Admin.html
+++ b/CAPSProj/src/main/resources/templates/Admin.html
@@ -17,12 +17,36 @@
 <div>
 	<table>
 		<tr>
-			<th>UserID</th>
-			<th>Salutation</th>
-			<th>First name</th>
-			<th>Last name</th>
-			<th>Role</th>
-			<th>Date of birth</th>
+			<th>
+				<a th:href="@{'/admin/page/' + ${currentPage} + '?sortField=userID&sortDir=' + ${reverseSortDir}}">
+				UserID
+				</a>
+			</th>
+			<th>
+				<a th:href="@{'/admin/page/' + ${currentPage} + '?sortField=salutation&sortDir=' + ${reverseSortDir}}">
+			Salutation
+				</a>
+			</th>
+			<th>
+				<a th:href="@{'/admin/page/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${reverseSortDir}}">
+			First name
+				</a>
+			</th>
+			<th>
+				<a th:href="@{'/admin/page/' + ${currentPage} + '?sortField=lastName&sortDir=' + ${reverseSortDir}}">	
+			Last name
+				</a>
+			</th>
+			<th>
+				<a th:href="@{'/admin/page/' + ${currentPage} + '?sortField=role&sortDir=' + ${reverseSortDir}}">
+				Role
+				</a>
+			</th>
+			<th>
+				<a th:href="@{'/admin/page/' + ${currentPage} + '?sortField=birthday&sortDir=' + ${reverseSortDir}}">
+			Date of birth
+				</a>
+			</th>
 			<th>Phone number</th>
 			<th>Email</th>
 			<th>Address</th>
@@ -45,22 +69,27 @@
 		Total Items: [[${totalItems}]] - Page[[${currentPage}]] of [[${totalPages}]]
 		&nbsp; - &nbsp;
 		
-		<a th:if="${currentPage > 1}" th:href="@{/admin/page/1}">First</a>
+		<a th:if="${currentPage > 1}" th:href="@{'/admin/page/1?sortField=' 
+		+ ${sortField} + '&sortDir=' + ${sortDir}}">First</a>
 		<span th:unless="${currentPage > 1}">First</span>
 		&nbsp;&nbsp;
-		<a th:if="${currentPage > 1}" th:href="@{'/admin/page/' + ${currentPage - 1}}">Previous</a>
+		<a th:if="${currentPage > 1}" th:href="@{'/admin/page/' + ${currentPage - 1} 
+		+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Previous</a>
 		<span th:unless="${currentPage  > 1}">Previous</span> &nbsp;&nbsp;
 		
 		
 		<span th:each="i: ${#numbers.sequence(1, totalPages)}">
-			<a th:if="${i != currentPage}" th:href="@{'/admin/page/' + ${i}}">[[${i}]]</a>
+			<a th:if="${i != currentPage}" th:href="@{'/admin/page/' + ${i}} 
+			+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}">[[${i}]]</a>
 			<span th:unless="${i != currentPage}">[[${i}]]</span> &nbsp;&nbsp;
 		</span>
 		
-		<a th:if="${currentPage < totalPages}" th:href="@{'/admin/page/' + ${currentPage + 1}}">Next</a>
+		<a th:if="${currentPage < totalPages}" th:href="@{'/admin/page/' + ${currentPage + 1} 
+		+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
 		<span th:unless="${currentPage < totalPages}">Next</span> &nbsp;&nbsp;
 		 
-		<a th:if="${currentPage < totalPages}" th:href="@{'/admin/page/' + ${totalPages}}">Last</a>
+		<a th:if="${currentPage < totalPages}" th:href="@{'/admin/page/' + ${totalPages} 
+		+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
 		<span th:unless="${currentPage < totalPages}">Last</span> &nbsp;&nbsp;
 		
 	</div>
