--- a/CAPSProj/src/main/resources/templates/lecturer/enrolment.html
+++ b/CAPSProj/src/main/resources/templates/lecturer/enrolment.html
@@ -25,31 +25,21 @@
   </div>
 </nav>
 
-<!-- <div class = "container">
+<div class = "container">
 		<div class = "row">
-			<div class = "col-lg-10 col-md-10 col-sm-10 container justify-content-center card">
+			<div class = "col-lg-10 container justify-content-center card">
 				<h1 class = "text-center"> View Course Enrollment </h1>
 				<div class = "card-body">
-					<form th:action="@{/enrolment}" th:object = "${enrolment}" method="POST">
+					<form th:action="@{/lecturer/enrolment}" method="GET">
 							
 						<div class = "form-group">
 							<label class = "mb-3"> Course Name </label>
-							<input
-							type = "text"
-							name = "salutation"
-							th:field = "*{salutation}"
-							class = "form-control"
-							>
+							<input type = "text" name = "courseName" class = "form-control" required>
 						</div>
 
 						<div class = "form-group">
-							<label class = "mb-3"> Course Batch </label>
-							<input
-							type = "text"
-							name = ""
-							th:field = "*{firstName}"
-							class = "form-control"
-							>
+							<label class = "mb-3"> Course Start Date </label>
+							<input type = "date" name = "courseStartDate" class = "form-control" required>
 						</div>
 
 						<div class = "box-footer float-end mt-3">
@@ -61,7 +51,7 @@
 				</div>
 			</div>
 		</div>
-	</div> -->
+	</div>
 
 	<div class = "container">
 		<div class = "row">
@@ -81,8 +71,12 @@
 		</thead>
 
 		<tbody>
-			<tr th:each = "enrolled,iterator: ${studentEnrolment}">
-				<div th:if="${enrolled.role != null}">
+			<tr th:each = "enrolled,iterator: ${enrolments}">
+
+				<td th:text = "${enrolled.courseName}"></td>
+				<td th:text="${enrolled.courseStartDate}"></td>
+
+				<!-- <div th:if="${enrolled.role != null}">
 				<span th:each = "enrolledtwo: ${enrolled.studentCourseDetail}">
 					<span th:each = "enrolledthree: ${enrolledtwo.stuCourse}">
 					<td hidden th:text = "${enrolledthree.courseName}"></td>
@@ -95,7 +89,7 @@
 				<span th:each = "enrolledtwo: ${enrolled.studentCourseDetail}">
 					<td th:text = "${enrolledtwo.dateOfEnrollment}"></td>
 				</span>
-				</div>
+				</div> -->
 			</tr>
 		</tbody>
 	</table>
