Updated: Changes to Code after Model Changes

--- a/CAPSProj/src/main/resources/templates/lecturer/enrolment.html
+++ b/CAPSProj/src/main/resources/templates/lecturer/enrolment.html
@@ -71,10 +71,12 @@
 		</thead>
 
 		<tbody>
-			<tr th:each = "enrolled,iterator: ${enrolments}">
+			<!-- <tr th:each = "enrolled,iterator: ${enrolments}">
+				<span th:each = "${enrolled.}">
 
+				</span>
 				<td th:text = "${enrolled.courseName}"></td>
-				<td th:text="${enrolled.courseStartDate}"></td>
+				<td th:text="${enrolled.courseStartDate}"></td> -->
 
 				<!-- <div th:if="${enrolled.role != null}">
 				<span th:each = "enrolledtwo: ${enrolled.studentCourseDetail}">
