Temporary commit to rebase on new master 2

--- a/CAPSProj/src/main/resources/templates/admin/editcourse.html
+++ b/CAPSProj/src/main/resources/templates/admin/editcourse.html
@@ -3,10 +3,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Add Course</title>
+<title>Edit Courses</title>
 </head>
 <body>
-	<h1>Add Course</h1>
+	<h1>Edit Course</h1>
 <form action="#" th:object="${product}" th:action="@{/product/save}" method="get">
 <fieldset> <input type="hidden" th:field="*{id}"> </fieldset>
 <fieldset> Name: <input type="text" th:field="*{name}"> </fieldset>
