--- a/CAPSProj/src/main/resources/templates/Admin.html
+++ b/CAPSProj/src/main/resources/templates/Admin.html
@@ -5,6 +5,7 @@
 <title>User page</title>
 </head>
 <body>
+<div align="center">
 	<h1>User listing</h1>
 	<div>
 	<form th:action="@{listfilter}">
@@ -56,11 +57,13 @@
 			<td th:text = ${user.salutation}>Salutation</td>
 			<td th:text = ${user.firstName}>First name</td>
 			<td th:text = ${user.lastName}>Last Name</td>
-			<td th:text = ${user.role}>UserID</td>
+			<td th:text = ${user.role}>Role</td>
 			<td th:text = ${user.birthday}>Date of birth</td>
 			<td th:text = ${user.phoneNumber}>Phone number</td>
 			<td th:text = ${user.email}>Email</td>
-			<td th:text = ${user.address}>Address</td>		
+			<td th:text = ${user.address}>Address</td>
+			<td><a th:href ="@{'/admin/edit/' + ${user.userID}}">Edit</a></td>
+			<td><a th:href ="@{/admin/deleteuser(id = ${user.userID})}">Delete</a></td>		
 		</tr>
 	</table>
 </div>
@@ -91,7 +94,13 @@
 		<a th:if="${currentPage < totalPages}" th:href="@{'/admin/page/' + ${totalPages} 
 		+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
 		<span th:unless="${currentPage < totalPages}">Last</span> &nbsp;&nbsp;
+		<br>
+		<br>
+		<a href="/admin/user/create"> Create User </a>
 		
 	</div>
+</div>
+
+
 </body>
 </html>
