Fixed: editing user creating a new user

--- a/CAPSProj/src/main/resources/templates/EditUser.html
+++ b/CAPSProj/src/main/resources/templates/EditUser.html
@@ -29,6 +29,7 @@
 				</select>
 				
 				<input type = "hidden" th:field="*{password}"/><br><br>
+				<input type = "hidden" th:field="*{userID}"/>
 				
 				<label>Email:</label>
 				<input type = "text" th:field="*{email}"/><br><br>
