add: edit enrolment, delete enrolment, add enrolment

--- a/CAPSProj/src/main/resources/templates/admin/enrolment.html
+++ b/CAPSProj/src/main/resources/templates/admin/enrolment.html
@@ -3,13 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <title>Admin Enrolment Page</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 <body>
 <h1>Enrolment Lists</h1>
 <h2>Add a Enrolment</h2>
 <a href="productform.html"
 		th:href="@{/admin/addenrolment}"> Add </a>
-<table>
+<table class="table table-striped">
 	<tr>
 		<th>No</th>
 		<th>Enrolment ID</th>
