--- a/CAPSProj/src/main/resources/templates/lecturer/enrolment.html
+++ b/CAPSProj/src/main/resources/templates/lecturer/enrolment.html
@@ -4,7 +4,11 @@
 <head>
 	<meta charset="ISO-8859-1">
 	<title>View Course Enrollment</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+	 <meta name="viewport" content="width=device-width, initial-scale=1">
+	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -27,22 +31,28 @@
 
 <div class = "container">
 		<div class = "row">
-			<div class = "col-lg-10 container justify-content-center card">
-				<h1 class = "text-center"> View Course Enrollment </h1>
-				<div class = "card-body">
-					<form th:action="@{/lecturer/enrolment}" method="GET">
-							
+			<div class = "container">
+				<h2 class = "text-center"> View Course Enrollment </h2>
+				<div>
+					<form class= "form-inline justify-content-center" th:action="@{/lecturer/enrolment/}" method="GET">
+
 						<div class = "form-group">
-							<label class = "mb-3"> Course Name </label>
-							<input type = "text" name = "courseName" class = "form-control" required>
+							<label class = "ml-3 mb-3 mr-3"> Course Name: </label>
+								<select id="selectCourse" name = "courseName" onchange="selectStartDate()">
+									<option 
+									th:each = "course: ${coursestaught}"
+									th:value = "${course.courseName}"
+									th:text = "${course.courseName}">
+									</option>
+								</select>
 						</div>
 
 						<div class = "form-group">
-							<label class = "mb-3"> Course Start Date </label>
+							<label class = "ml-3 mb-3 mr-3"> Course Start Date: </label>
 							<input type = "date" name = "courseStartDate" class = "form-control" required>
 						</div>
-
-						<div class = "box-footer float-end mt-3">
+						
+						<div class = "box-footer float-end mt-3 ml-3">
 							<button type="submit" class = "btn btn-primary">
 								Submit
 							</button>
@@ -54,8 +64,8 @@
 	</div>
 
 	<div class = "container">
-		<div class = "row">
-			<h1 class = "text-center"> Course Enrollment Details </h1>
+		<div class = "row justify-content-center">
+			<h2 class = "text-center"> Course Enrollment Details </h2>
 		</div>
 
 	<table class="table table-striped">
@@ -70,15 +80,55 @@
 		</thead>
 
 		<tbody>
-			<tr th:each = "enrolled,iterator: ${enrolments}">
-				<td th:text = "${enrolled.courseName}"></td>
-				<td th:text= "${enrolled.courseStartDate}"></td>
-
-				
+			<tr th:each = "user,iterator: ${users}">
+				<td th:text = "${iterator.index + 1}"></td>
+				<td th:text = "${user.userID}"></td>
+				<td th:text = "${user.firstName} + ' ' + ${user.lastName}"></td>
+				<td th:text = "${user.email}"></td>
+				<span th:each = "sc: ${user.studentCourseDetail}">
+					<td th:text = "${sc.dateOfEnrollment}"></td>
+				</span>
 			</tr>
 		</tbody>
 	</table>
 	</div>
 </body>
+
+<!-- Code for Search Bar function. Please do not delete. Thank you. -->
+
+<!-- <div class = "form-group" style="float:left">
+							<label class = "mb-3"> Course Name: </label>
+							<input type = "text" name = "courseName" class = "form-control" required>
+						</div> -->
+
+						
+
+
+<!-- <div class = "form-group" style="float:right">
+							<label class = "mb-3"> Course Start Date: </label>
+								<select id="selectStartDate" name = "courseStartDate">
+									<option 
+									th:each = "course: ${coursestaught}"
+									th:value = "${course.courseStartDate}"
+									th:text = "${course.courseStartDate}">
+									</option>
+								</select>
+						</div> -->
+
+						
+
+<!-- <tr th:each = "course,iterator: ${courses}">
+					<td th:text = "${iterator.index + 1}"></td>
+				<span th:each = "user: ${course.users}">
+					<span th:if = "${user.role == user.role.STUDENT}">
+						<td th:text = "${user.userID}"></td>
+						<td th:text = "${user.firstName} + ' ' + ${user.lastName}"></td>
+						<td th:text = "${user.email}"></td>
+						<span th:each = "studentCourseDetails: ${user.studentCourseDetail}">
+							<td th:text = "${studentCourseDetails.dateOfEnrollment}"></td>
+						</span>
+					</span>
+				</span>
+			</tr> -->
 
 </html>
