--- a/CAPSProj/src/main/resources/templates/lecturer/coursestaught.html
+++ b/CAPSProj/src/main/resources/templates/lecturer/coursestaught.html
@@ -3,8 +3,18 @@
 
 <head>
 	<meta charset="ISO-8859-1">
-	<title>Courses Taught</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+	<title>View Courses Taught</title>
+	 <meta name="viewport" content="width=device-width, initial-scale=1">
+	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	    <link rel="stylesheet" type="text/css" href="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.0/css/jquery.dataTables.css">
+      <link rel="stylesheet" type="text/css" href="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.0/css/jquery.dataTables_themeroller.css">
+        <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.min.js"></script>
+        <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.0/jquery.dataTables.min.js"></script>
+	<script>
+	  $(document).ready( function () {
+    	$('#table_coursestaught').DataTable();
+		} );
+	</script>
 </head>
 
 <body>
@@ -27,10 +37,10 @@
 
 	<div class = "container">
 		<div class = "row">
-			<h1 class = "text-center"> Courses Taught </h1>
+			<h2 class = "text-center"> Courses Taught </h2>
 		</div>
 
-	<table class="table table-striped">
+	<table id = "table_coursestaught" class="table table-striped">
 		<thead>
 			<tr>
 				<th>S/N</th>
@@ -42,15 +52,16 @@
 		</thead>
 
 		<tbody>
-				<tr th:each = "coursetaught,iterator: ${coursestaught}">
-					<td th:text = "${iterator.index + 1}"></td>
-					<td th:text = "${coursetaught.courseID}"></td>
-					<td th:text = "${coursetaught.courseName}"></td>
-					<td th:text = "${coursetaught.courseCapacity}"></td>
-					<span th:each = "studentCourseDetail: ${coursetaught.studentCourseDetails}">
-						<td th:text = "${studentCourseDetail.enrolmentStatus}"></td>
-					</span>
-				</tr>
+			<tr th:each = "coursetaught,iterator: ${coursestaught}">
+				<td th:text = "${iterator.index + 1}"></td>
+				<td th:text = "${coursetaught.courseID}"></td>
+				<td th:text = "${coursetaught.courseName}"></td>
+				<td th:text = "${coursetaught.courseCapacity}"></td>
+				<td> test </td>
+				<!-- <span th:each = "studentCourseDetail: ${coursetaught.studentCourseDetails}">
+					<td th:text = "${studentCourseDetail.enrolmentStatus}"></td>
+				</span> -->
+			</tr>
 		</tbody>
 	</table>
 	</div>
