--- a/CAPSProj/src/main/resources/templates/lecturer/enrolment.html
+++ b/CAPSProj/src/main/resources/templates/lecturer/enrolment.html
@@ -12,7 +12,7 @@
         <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.0/jquery.dataTables.min.js"></script>
 	<script>
 	  $(document).ready( function () {
-    	$('#table_id').DataTable();
+    	$('#table_enrolment').DataTable();
 		} );
 	</script>
 </head>
@@ -74,7 +74,7 @@
 			<h3 class = "text-center"> Course Enrollment Details: </h3>
 		</div>
 
-	<table id = "table_id" class="table table-striped">
+	<table id = "table_enrolment" class="table table-striped">
 		<thead>
 			<tr>
 				<th>S/N</th>
