Login and logout merged.
Added enumtype=string to roles in user model

--- a/CAPSProj/src/main/resources/templates/admin/success.html
+++ b/CAPSProj/src/main/resources/templates/admin/success.html
@@ -28,7 +28,7 @@
 		<span>Address: </span><span th:text="${user.address}"></span>
 		<br><br>
 		<p>*Please change the default password within 7 days.</p>
-		<span>Password: </span><span th:text="${user.password}"></span>
+		<span>Password: </span><span th:text="${password}"></span>
 		<br><br>
 		<br><br>
 		<a href="/admin/list"><button>Exit</button></a>
