--- a/CAPSProj/src/main/resources/templates/admin/EditUser.html
+++ b/CAPSProj/src/main/resources/templates/admin/EditUser.html
@@ -30,6 +30,7 @@
 				
 				<input type = "hidden" th:field="*{password}"/><br><br>
 				<input type = "hidden" th:field="*{userID}"/>
+				<input type = "hidden" th:field="*{enabled}"/>
 				
 				<label>Email:</label>
 				<input type = "text" th:field="*{email}"/><br><br>
