--- a/CAPSProj/src/main/resources/templates/admin/Admin.html
+++ b/CAPSProj/src/main/resources/templates/admin/Admin.html
@@ -8,9 +8,9 @@
 <body>
 <div align="center">
 	 <div sec:authorize="isAuthenticated()">
-		Welcome <b><span sec:authentication="name">first name</span></b>
+		Welcome <b><span th:text = ${firstName}>first name</span></b>
 		&nbsp;
-		<span sec:authentication="principal.authorities">Roles </span>
+		<span sec:authentication="principal.role">Roles </span>
 		<br><br>
 		<form th:action="@{/logout}" method="post">
 			<input type="submit" value="Logout"/>
