Changes in Student Controller

--- a/CAPSProj/src/main/resources/templates/student/enrolmentlist.html
+++ b/CAPSProj/src/main/resources/templates/student/enrolmentlist.html
@@ -8,6 +8,8 @@
 
 <h1>Enrolment List</h1>
 
+<h4 th:if="${CourseAlreadyStartedErrorMsg != null}" th:text="${CourseAlreadyStartedErrorMsg}"></h4>
+
 <table>
 
 	<thead>
