--- a/CAPSProj/src/main/resources/templates/student/lecturercourses.html
+++ b/CAPSProj/src/main/resources/templates/student/lecturercourses.html
@@ -12,7 +12,7 @@
 <h4 th:if="${ExistsErrorMsg != null}" th:text="${ExistsErrorMsg} "></h4>
 <h4 th:if="${CourseAlreadyStartedErrorMsg != null}" th:text="${CourseAlreadyStartedErrorMsg}"></h4>
 
-<div>
+<div class = "container">
 <table>
 	<thead>	
 		<tr>			
